# tharicode

./: LICENSE  README.md  package-lock.json  package.json
.github/: workflows.yml
.github/workflows/: main.yml
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  license.txt  tauri.conf.json  tauri.windows.conf.json
src-tauri/src/: file_manager.rs  main.rs
src/components/: Code.tsx  CodeArea.tsx  CodeEditor.tsx  FileIcon.tsx  NavFiles.tsx  NavFolderItem.tsx  PreviewImage.tsx  Sidebar.tsx  Titlebar.tsx
src/context/: SourceContext.tsx
src/helpers/: filesys.ts  horizontalScroll.ts  storage.ts
src/storage/: file.ts
src/types/: index.ts
