[package]
name = "tharicode"
version = "0.0.1"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [ "window-minimize", "process-relaunch", "window-start-dragging", "dialog-all", "fs-rename-file", "window-unminimize", "window-set-fullscreen", "notification-all", "fs-write-file", "clipboard-all", "window-unmaximize", "fs-create-dir", "window-set-focus", "window-hide", "window-set-decorations", "window-close", "path-all", "fs-remove-file", "window-create", "window-print", "window-set-cursor-visible", "fs-read-file", "fs-copy-file", "fs-remove-dir", "window-maximize", "fs-read-dir", "window-set-size", "system-tray", "fs-exists", "os-all", "window-center", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = "s" # Optimize for binary size
